--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^0.19.0",
     "expo": "^35.0.0",
     "expo-speech": "~7.0.0",
+    "lottie-react-native": "~2.6.1",
+    "moment": "^2.24.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
@@ -22,8 +24,7 @@
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
-    "react-navigation-tabs": "^2.5.6",
-    "lottie-react-native": "~2.6.1"
+    "react-navigation-tabs": "^2.5.6"
   },
   "devDependencies": {
     "@types/react": "^16.8.23",
